# lightroom-plugin-export-hdr

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md
.github/workflows/: release-plugin.yml
ExportHDR.lrplugin/: Command.lua  ExportHDRFilterProvider.lua  Info.lua  Log.lua  PluginInit.lua  UHDRSettings.lua
ExportHDR.lrplugin-windows-x64/ExportHDR.lrplugin/: Command.lua  UHDRSettings.lua
scripts/: build_plugin.ps1  build_plugin.sh  build_release_notes.sh  bundle_uhdr_for_plugin.sh  bundle_uhdr_for_plugin_windows.ps1  package_plugin.sh  parse_plugin_version.sh  run_uhdr_test.ps1  run_uhdr_test.sh  setup_windows_build.ps1  test_windows_cmd_quote.ps1  windows-vctools.vsconfig  windows_build_common.ps1
scripts/docker/repro-cmake4-turbojpeg/: Dockerfile  run-in-container.sh  run.sh
test/: .gitignore  README.md
tools/uhdr_repack/: CMakeLists.txt  CMakePresets.json  README.md
tools/uhdr_repack/include/: gainmap_metadata.h  half_float.h  path_io.h  raw_image.h  sdr_input.h  slice_plan.h  tiff_input.h  uhdr_encode.h  verify.h  wic_utils.h  yuv_convert.h
tools/uhdr_repack/src/: gainmap_metadata.cpp  half_float.cpp  main.cpp  sdr_input.mm  sdr_input_win.cpp  slice_plan.cpp  tiff_input.mm  tiff_input_win.cpp  uhdr_encode.cpp  verify.cpp  wic_utils.cpp  yuv_convert.cpp
